--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,7 @@
 /* Add Roboto font and imports */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import './variables.css';
+@import './buttons.css';
 @import './animations.css';
 
 /* Debugging */
@@ -18,6 +19,7 @@ body {
   max-width: 1600px;
   margin: auto;
   overflow-x: hidden;
+  padding: 0 0.5rem;
 }
 
 nav {
@@ -26,7 +28,7 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
 }
 
 .nav-title {
@@ -51,7 +53,7 @@ nav {
   grid-template-columns: 2fr 1fr;
   align-items: center;
   justify-items: center;
-  padding: 0.5rem;
+  padding: 0.5rem 0;
   width: calc(100% - 2rem);
 }
 
@@ -74,21 +76,8 @@ nav {
   height: 200px;
 }
 
-@media screen and (max-width: 450px) {
-  .hero {
-    grid-template-columns: 1fr;
-  }
-  .nav-title{
-    font-size: 1.25rem;
-  }
-}
-
 .todo {
   text-align: center;
-}
-
-.skills {
-  padding: 0 0.5rem;
 }
 
 .section-heading {
@@ -118,4 +107,78 @@ nav {
 .sk-badge {
   height: 2rem;
   margin: 0.5rem;
+}
+
+.project-grid {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(calc(380px - 1rem), 1fr));
+  justify-items: stretch;
+  align-items: stretch;
+}
+
+.card {
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25);
+  border-radius: 2px;
+  padding: 1rem;
+}
+
+.card-text {
+  padding: 0.5rem 0;
+}
+
+.project {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-title {
+  display: grid;
+  gap: 1rem;
+  font-size: 1.5rem;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.project-logo {
+  height: 4rem;
+  padding: 0 0.5rem;
+}
+
+.project-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card-title {
+  margin: 0;
+}
+
+.card-subtitle {
+  font-size: 0.9rem;
+  margin: 0.5rem 0;
+}
+
+.project-tech {
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
+}
+
+.project-tech > img {
+  height: 2rem;
+  padding: 0 1rem;
+}
+
+@media screen and (max-width: 450px) {
+  .hero, .project-grid {
+    grid-template-columns: 1fr;
+  }
+  .nav-title{
+    font-size: 1.25rem;
+  }
 }
