--- a/css/main.css
+++ b/css/main.css
@@ -261,8 +261,19 @@ textarea {
   }
 }
 
-@import './home.css';
-
 .text-ul {
   text-decoration: underline;
 }
+
+.text-med {
+  color: var(--text-med);
+}
+
+/* Rules for sizing the  material icons. */
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-32 { font-size: 32px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+
+@import './home.css';
