--- a/css/home.css
+++ b/css/home.css
@@ -51,10 +51,11 @@ nav {
   display: grid;
   gap: 1rem;
   grid-template-columns: 2fr 1fr;
+  align-content: center;
   align-items: center;
   justify-items: center;
   padding: 0.5rem 0;
-  width: calc(100% - 2rem);
+  width: 100%;
 }
 
 .hero-text {
