--- a/css/home.css
+++ b/css/home.css
@@ -16,23 +16,36 @@ html {
 }
 
 body {
-  max-width: 1600px;
-  margin: auto;
   overflow-x: hidden;
-  padding: 0 0.5rem;
+}
+
+.content {
+  max-width: 1600px;
+  padding: 3.5rem 0.5rem 0 0.5rem;
+  margin: auto;
 }
 
 nav {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);
+  background-color: white;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+}
+
+.nav-content {
   text-align: center;
-  height: 3rem;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  padding: 0.5rem;
+  padding: 0.65rem 1rem;
+  max-width: 1600px;
+  margin: auto;
 }
 
 .nav-title {
-  font-size: 1.75rem;
+  font-size: 1.6rem;
+  margin: 0;
   color: var(--primary);
 }
 
@@ -43,8 +56,8 @@ nav {
 }
 
 .social-link {
-  height: 2.5rem;
-  margin: 0.5rem;
+  height: 2rem;
+  margin: 0 0.6rem;
 }
 
 .hero {
@@ -55,7 +68,7 @@ nav {
   align-items: center;
   justify-items: center;
   justify-content: center;
-  padding: 0.5rem 0;
+  padding: 1rem 0 0.5rem 0;
   width: 900px;
   max-width: 100%;
   margin: auto;
@@ -184,10 +197,10 @@ nav {
 }
 
 @media screen and (max-width: 450px) {
-  .hero, .project-grid {
-    grid-template-columns: 1fr;
-  }
   .nav-title{
     font-size: 1.25rem;
+  }
+  .hero, .project-grid {
+    grid-template-columns: 1fr;
   }
 }
