--- a/css/animations.css
+++ b/css/animations.css
@@ -1,7 +1,7 @@
 /* Animation */
 .typewriter{
   animation: typewriter 2s steps(20, end),
-             blinkTextCursor 750ms steps(44) infinite normal;
+             blinkTextCursor 1000ms steps(44) normal;
 }
 @keyframes typewriter{
   from{width: 0;}
