--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,7 @@ body {
 
 .content {
   max-width: 1600px;
-  padding: 3.5rem 1rem 0.5rem 1rem;
+  padding: 3.5rem 1rem 0 1rem;
   margin: auto;
 }
 
