--- a/css/home.css
+++ b/css/home.css
@@ -80,7 +80,7 @@ nav {
 
 .hero {
   display: grid;
-  gap: 1rem;
+  gap: 0.5rem;
   grid-template-columns: 2fr 1fr;
   align-content: center;
   align-items: center;
@@ -106,9 +106,11 @@ nav {
   white-space: nowrap;
 }
 
-#hi-bitmoji {
+#profile-img {
   grid-row: span 2;
   height: 200px;
+  border: solid 3px var(--primary);
+  border-radius: 50%;
 }
 
 .section-heading {
@@ -219,12 +221,29 @@ nav {
   text-align: center;
 }
 
+.footer {
+  width: 100%;
+  display: flex;
+  padding: 1rem 0;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.credits {
+  color: var(--primary);
+  font-size: 1.1rem;
+}
+
+.resume-dl {
+  margin: 0;
+}
+
 @media screen and (max-width: 450px) {
   .nav-title {
     font-size: 1.25rem;
   }
-  .hero, .project-grid {
-    grid-template-columns: 1fr;
+  .credits {
+    font-size: 0.9rem;
   }
 }
 
@@ -233,8 +252,11 @@ nav {
     display: none;
   }
   .content {
-    padding-bottom: 4rem;
+    padding-bottom: 3.5em;
     padding-top: 0.5rem;
+  }
+  .hero, .project-grid {
+    grid-template-columns: 1fr;
   }
   nav {
     position: initial;
