--- a/css/home.css
+++ b/css/home.css
@@ -4,11 +4,6 @@
 @import './variables.css';
 @import './common.css';
 @import './animations.css';
-/* Debugging */
-
-/* body * {
-  border: solid 1px green;
-} */
 
 nav {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);
@@ -104,10 +99,15 @@ nav {
   font-size: 3rem;
   overflow: hidden;
   white-space: nowrap;
+  margin: 1rem 0;
+}
+
+.profile-img-container {
+  grid-row: span 2;
+  
 }
 
 #profile-img {
-  grid-row: span 2;
   height: 160px;
   border: solid 3px var(--primary);
   border-radius: 50%;
@@ -234,17 +234,9 @@ nav {
   align-items: center;
 }
 
-.resume-dl {
-  margin: 0;
-}
-
 @media screen and (max-width: 450px) {
   .nav-title {
     font-size: 1.25rem;
-  }
-  .credits {
-    font-size: 0.9rem;
-    font-weight: normal;
   }
 }
 
@@ -280,8 +272,5 @@ nav {
   .anchor:before {
     height: 1rem;
     margin-top: -1rem;
-  }
-  .credits {
-    display: none;
   }
 }
